Since deployment one mayor issue with overflow on mobile view appeared. The issue is due to bootstrap rows missing container and overflow-x on body not working. This issue has been fixed on index.html and base.html

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -315,7 +315,7 @@ a.nav-item.nav-link.main-nav-item {
 
 .product-display-row {
     margin-top: 4em;
-    margin-left: 12%;
+    margin-left: 0%;
 }
 
 .product-img {
@@ -530,7 +530,7 @@ footer .header-h3 {
     .product-display-row {
         margin-top: 4em;
         margin-left: 5%;
-        margin-right:5%;
+        margin-right: 5%;
         text-align: center;
         -webkit-box-shadow: -2px -2px 10px -1px rgba(0,0,0,0.5);
         -moz-box-shadow: -2px -2px 10px -1px rgba(0,0,0,0.5);
@@ -639,7 +639,7 @@ footer .header-h3 {
     .product-display-row {
         height: 20em;
         margin-top: 4em;
-        margin-left: 12%;
+        margin-left: 0%;
     }
     
     .product-img {
